--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .vscode/setting.json
 .vscode/launch.json
 flask_blog/__pycache__/config.cpython-38.pyc
+flask_blog/__pycache__/config.cpython-38.pyc
+flask_blog/__pycache__/views.cpython-38.pyc
